# VLPR

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/vlpr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CarPlateRecgnize.cpp  CarPlateRecgnize.h  ColorLocation.cpp  ColorLocation.h  SobelLocation.cpp  SobelLocation.h  native-lib.cpp
app/src/main/cpp/base/: BasePlateLocation.cpp  BasePlateLocation.h
app/src/main/java/com/example/vlpr/: MainActivity.java
app/src/main/res/layout/: activity_camera.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/vlpr/: ExampleUnitTest.java
